build/log/idf_py_stdout_output_30732
Command: ninja all
[1/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_14.c.obj
[2/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_16.c.obj
[3/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/npisarev/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/build/config -I/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main -I/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/images -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/newlib/platform_include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/freertos/config/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/freertos/config/include/freertos -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/freertos/config/riscv/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/freertos/esp_additions/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/include/soc -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/dma/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/ldo/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/power_supply/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/port/esp32c6/. -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/port/esp32c6/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/heap/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/heap/tlsf -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/log/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/soc/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/soc/esp32c6 -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/soc/esp32c6/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/soc/esp32c6/register -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/hal/platform_port/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/hal/esp32c6/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/hal/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_rom/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_rom/esp32c6/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_rom/esp32c6 -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_common/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_system/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_system/port/soc -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_system/port/include/riscv -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_system/port/include/private -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/riscv/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/lwip/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/lwip/include/apps -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/lwip/include/apps/sntp -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/lwip/lwip/src/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/lwip/port/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/lwip/port/freertos/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/lwip/port/esp32xx/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_timer/include -I/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/components/lvgl -I/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/components/lvgl/lvgl/src -I/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/components/lvgl/lvgl -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_driver_spi/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_pm/include -I/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/components/driver -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_driver_ledc/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_driver_gpio/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/nvs_flash/include -I/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf/components/esp_partition/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/npisarev/Projects/ESP32/ESP32-Agata-robot=. -fmacro-prefix-map=/Users/npisarev/Projects/ESP32/ESP-IDF/v5.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/main.c
/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/main.c:45:12: error: redefinition of 'PIN_BCKL'
   45 | static int PIN_BCKL = 22;
      |            ^~~~~~~~
/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/main.c:19:12: note: previous definition of 'PIN_BCKL' with type 'int'
   19 | static int PIN_BCKL = 22;
      |            ^~~~~~~~
/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/main.c:548:9: warning: "INIT_SLIDE_DELAY_MS" redefined
  548 | #define INIT_SLIDE_DELAY_MS         100  // Delay between init animation frames
      |         ^~~~~~~~~~~~~~~~~~~
/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/main.c:40:9: note: this is the location of the previous definition
   40 | #define INIT_SLIDE_DELAY_MS 300
      |         ^~~~~~~~~~~~~~~~~~~
/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/main.c:549:9: warning: "ANIMATION_SLIDE_DELAY_MS" redefined
  549 | #define ANIMATION_SLIDE_DELAY_MS    100  // Delay between hi animation frames
      |         ^~~~~~~~~~~~~~~~~~~~~~~~
/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/main.c:41:9: note: this is the location of the previous definition
   41 | #define ANIMATION_SLIDE_DELAY_MS 400
      |         ^~~~~~~~~~~~~~~~~~~~~~~~
/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/main.c:550:9: warning: "ANIMATION_LOOP_DELAY_MS" redefined
  550 | #define ANIMATION_LOOP_DELAY_MS     600  // 3 second pause between hi loops
      |         ^~~~~~~~~~~~~~~~~~~~~~~
/Users/npisarev/Projects/ESP32/ESP32-Agata-robot/main/main.c:42:9: note: this is the location of the previous definition
   42 | #define ANIMATION_LOOP_DELAY_MS 1000
      |         ^~~~~~~~~~~~~~~~~~~~~~~
[4/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_11.c.obj
[5/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_8.c.obj
[6/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_10.c.obj
[7/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_13.c.obj
[8/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_17.c.obj
[9/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_15.c.obj
[10/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_9.c.obj
[11/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_7.c.obj
[12/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_12.c.obj
[13/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/init_18.c.obj
[14/56] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/images/hi_1.c.obj
ninja: build stopped: subcommand failed.
